2007-09-25  Ian Turner <ian@zmanda.com> (merged by dustin@zmanda.com)
	* restore-src/restore.c: Fix a bug where amfetchdump would not
	  restore anything when given the -p option. Thanks to Jean-Louis
	  Martineau <martineau@zmanda.com> for help in the development of
	  this patch.

2007-09-25  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: note that includefile can
	  take relative paths
	* server-src/amcleanupdisk.c: fix local variable shadowing 
	  config_dir

2007-09-25  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/holding.c (holding_walk_file): amfree(filename).

2007-09-25  John Franks <jrfranks@zmanda.com> (merged by dustin@zmanda.com)
	* man/Makefile.am: fixes for conditional compiles

2007-09-25  Ian Turner <ian@zmanda.com> (merged by dustin@zmanda.com)
	* common-src/conffile.c: Clean up some bad warning suppression and
	  obselete unused code.

2007-09-25  Ian Turner <ian@zmanda.com> (merged by dustin@zmanda.com)
	* example/config.site man/xml-source/amanda.conf.5.xml
	  device-src/device.c device-src/device.h device-src/property.c
	  device-src/fd-device.c device-src/tape-device.c
	  device-src/property.h device-src/tape-device.h
	  device-src/tape-ops.h server-src/amcheck.c server-src/amtape.c
	  server-src/taperscan.c server-src/taper.c server-src/amlabel.c
	  restore-src/amrestore.c restore-src/restore.c:
	  This patch adds a new property READ_BUFFER_SIZE which is used
	  only by the tape device. The VFS device still uses BLOCK_SIZE
	  for reading; other devices don't need the property.

2007-09-25  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amcheck.c: remove debugging message
	* device-src/tape-posix.c: fix compilation
	  errors when MTCOMPRESSION is not defined

2007-09-25  Dustin J. Mitchell <dustin@zmanda.com>
	* Makefile.am config/Makefile.am config/ax_create_stdint_h.m4i
	  autogen configure.in: remove AX_CREATE_STDINT_H
	* configure.in: add system-specific glib configuration