@@ -1,31 +1,0 @@
-/*
- * Amanda, The Advanced Maryland Automatic Network Disk Archiver
- * Copyright (c) 2005 Zmanda Inc.
- *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this library; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
- */
-
-/* This function returns the current directory without the BS; that
-   is, it returns a dynamically-allocated string containing the
-   current directory. You should free it when done. If the return
-   value is NULL, it means a severe error occured (either the CWD has
-   been unlinked, or we lack permission to read it). */
-
-#ifndef GETCWD_H
-#define GETCWD_H
-
-extern char * safe_getcwd(void);
-
-#endif
