@@ -372,7 +372,7 @@ main(
     psfname = NULL;
     logfname = NULL;
 
-    cwd = safe_getcwd();
+    cwd = g_get_current_dir();
     if (cwd == NULL) {
 	error(_("Cannot determine current working directory: %s"),
 	      strerror(errno));
